--- a/index.html
+++ b/index.html
@@ -642,11 +642,10 @@ neural network
     <div class="item hvr-reveal-float-top hvr-overline-from-left">
 
         <p class="title">
-            <i class="fa fa-tasks title-icon"></i> StackBooks: best programming books recommended by Stack Overflow experts
+            <i class="fa fa-tasks title-icon"></i> Introduction to Data Science in Python
         </p> 
         <p class="text">
-        <strong>Techniques</strong>: Python | SQL | Pandas |Web crawling | Scrapy | text mining | sentiment analysis |
-        D3 | web development | AWS Cloud
+        This is the first course of <a href="https://www.coursera.org/account/accomplishments/specialization/certificate/386Y59GKBERN" target="_blank"> Applied Data Science with Python</a>, a 5-course specialization by University of Michigan on Coursera. 
         </p>
         <div class="body">
                 <p>
@@ -654,30 +653,29 @@ neural network
                 <ul>
                     <li>
                         <div class="number">1</div>
-                        <div class="task-item-text">Analyzed the entire Stack Overflow questions and answers (50G), 
-                            indexed and managed the data with a SQL database to extract all books discussed in different tags.  
+                        <div class="task-item-text">
+                            data manipulation and cleaning techniques using pandas
                         </div>
                         <div class="clear"></div>
                     </li>
                     <li>
                         <div class="number">2</div>
                         <div class="task-item-text">
-                            Scraped Amazon website for Book information including cover page, title, authors and book summary
+                            how to use functions such as groupby, merge, and pivot tables effectively
                         </div>
                         <div class="clear"></div>
                     </li>
                     <li>
                         <div class="number">3</div>
                         <div class="task-item-text">
-                            Performed text mining on the 
-                            posts and questions including sentiment analysis and word frequency and visualized the data with D3/NVD3 library
+                             basic inferential statistical analyses using Python
                         </div>
                         <div class="clear"></div>
                     </li>
                     <li>
                         <div class="number">4</div>
-                        <div class="task-item-text">Built a website with Flask and deployed it on Amazon EC2 using Beanstalk, 
-                            now live at: <a href="http://stackbooks.us-west-2.elasticbeanstalk.com/" target="_blank">StackBooks</a>
+                        <div class="task-item-text">
+                            <style="color:red"> Course project: investigate if university town housing prices were less affected by economic recessions using Zillow research data (https://www.zillow.com/research/data/) </style>.
                         </div>
                         <div class="clear"></div>
                     </li>
