--- a/index.html
+++ b/index.html
@@ -642,10 +642,19 @@ neural network
     <div class="item hvr-reveal-float-top hvr-overline-from-left">
 
         <p class="title">
-            <i class="fa fa-tasks title-icon"></i> Introduction to Data Science in Python
+            <i class="fa fa-tasks title-icon"></i> Introduction to Data Science in Python <i class="fas fa-address-card title-icon"></i>
+
+
+
+
+
+
+
+
+
         </p> 
         <p class="text">
-        This is the first course of <a href="https://www.coursera.org/account/accomplishments/specialization/certificate/386Y59GKBERN" target="_blank"> Applied Data Science with Python</a>, a 5-course specialization by University of Michigan on Coursera. 
+        This is the first course of <u><a href="https://www.coursera.org/account/accomplishments/specialization/certificate/386Y59GKBERN" target="_blank"> Applied Data Science with Python</a></u>, a 5-course specialization by University of Michigan on Coursera. 
         </p>
         <div class="body">
                 <p>
@@ -675,7 +684,7 @@ neural network
                     <li>
                         <div class="number">4</div>
                         <div class="task-item-text">
-                            <style="color:red"> Course project: investigate if university town housing prices were less affected by economic recessions using Zillow research data (https://www.zillow.com/research/data/) </style>.
+                            <span class="task-item-highlight"> Course project </span>: investigate if university town housing prices were less affected by economic recessions using Zillow research data (https://www.zillow.com/research/data/) .
                         </div>
                         <div class="clear"></div>
                     </li>
