--- a/index.html
+++ b/index.html
@@ -9,22 +9,16 @@
 <link rel="icon" type="image/png" href="dist/images/faviconPT.png">
 
 <title>Pan Tong - Data Scientist</title>
-<meta name="description" content="Hello, I am Pan Tong, I like the idea of creating a huge back-end and intuitive interfaces for users and that is reason I became a Full-Stack developer." />
-<link rel="author" href="https://www.linkedin.com/in/michaeldfti">
+<meta name="description" content="Hello, I am Pan Tong, Data Scientist" />
+<link rel="author" href="https://www.linkedin.com/in/pan-tong-98155127">
 
 <meta name="keywords" content="Pan Tong, Data Scientist, Machine Learning, Python, R, Big Data"/>
 
 <!-- Facebook and Twitter meta-tags -->
 <meta property="og:title" content="Pan Tong - Data Scientist"/>
-<meta property="og:image" content="https://dl.dropboxusercontent.com/s/vqyp2aazbyuisa5/michaelsilva-social-media.jpg"/>
 <meta property="og:url" content="/"/>
-<meta property="og:site_name" content="Pan Tong - Full-Stack developer, UI/UX designer"/>
-<meta property="og:description" content="Hello, I am Pan Tong, I like the idea of creating a huge back-end and intuitive interfaces for users and that is reason I became a Full-Stack developer."/>
-
-<meta name="twitter:title" content="Pan Tong - Data Scientist" />
-<meta name="twitter:image" content="https://dl.dropboxusercontent.com/s/vqyp2aazbyuisa5/michaelsilva-social-media.jpg" />
-<meta name="twitter:url" content="/" />
-<meta name="twitter:card" content="Hello, I am Pan Tong, I like the idea of creating a huge back-end and intuitive interfaces for users and that is reason I became a Full-Stack developer." />
+<meta property="og:site_name" content="Pan Tong - Data Scientist"/>
+<meta property="og:description" content="Hello, I am Pan Tong"/>
 
           <link rel="stylesheet" href="dist/css/styles.css">
 	  </head>
